# nnc

./: Cargo.toml  build.rs  readme.md
.github/workflows/: release.yaml  rust.yaml
src/: main.rs
