[package]
name = "nnc"
version = "0.1.0"
edition = "2021"
description = "netcat like utility to copy traffic from listenting port to destination that lives in another namespace"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
clap = { version = "4.1", features = ["derive"] }
nix = { version = "0.26", features = ["sched"] }
tokio = { version = "1.26", features = ["rt", "rt-multi-thread", "net", "io-util"] }
